# ytc

./: .gitignore  README.md  package.json  ytc.sublime-project
frontend/: Cargo.toml  index.html
frontend/public/: glue_code.js
frontend/public/css/: main.css
frontend/src/: main.rs  text_input.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
