[package]
name = "ytc-backend"
version = "0.0.0"
description = "ytc - YouTube Client"
authors = ["you"]
license = "GPL-3.0-or-later"
repository = "https://github.com/tshrpl/ytc"
default-run = "ytc-backend"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
